--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav mx-auto">
               <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="#">élete</a>
               <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="#">Iskola évei</a>
               <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="#">Betegsége, halála és temetése</a>
