--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     
     <nav class="navbar navbar-expand-lg navbar-light hatter ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Főoldal</a>
+          <a class="navbar-brand" href="index.html">Főoldal</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav mx-auto">
-              <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="#">élete</a>
-              <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="#">Iskola évei</a>
-              <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="#">Betegsége, halála és temetése</a>
-              <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="#" >Arany jelentősebb költeményei</a>
+              <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="elete.html">élete</a>
+              <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="iskola.html">Iskola évei</a>
+              <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="betegsege.html">Betegsége, halála és temetése</a>
+              <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="koltemeny.html" >Arany jelentősebb költeményei</a>
             </div>
           </div>
         </div>
