--- a/iskola.html
+++ b/iskola.html
@@ -38,14 +38,13 @@
     </nav>
 
     <br>
-    
+
 
     <div class="container">
 
         <h3 class="text-decoration-underline fw-bold text-center">Iskolai évei:</h3>
 
         <br>
-
 
         <div style="margin-right: 100px;" class="row gap-3">
             <div class="col  col-md-12 col-lg-5 mx-auto text-center">
@@ -60,7 +59,8 @@
                             Kisújszálláson Török Pál, a későbbi református püspök volt a rektor, aki megnyitotta jeles
                             könyvtárát Arany előtt, és ennek köszönhetően éjjel-nappal olvasott. A német és francia
                             nyelvben is elmélyült, és latinból, németből fordítgatott, sőt a költészettel is
-                            kísérletezett. Egy év múlva visszament Debrecenbe, ahol tanárai is felfigyeltek rá. Kisújszállási
+                            kísérletezett. Egy év múlva visszament Debrecenbe, ahol tanárai is felfigyeltek rá.
+                            Kisújszállási
                             ajánlóleveleivel és szorgalmával hamarosan az osztály élére került, és a tanítás folytán
                             anyagi helyzete is tűrhetővé vált. Magántanítványai közé tartoztak többek közt Erdélyi
                             József tanár lányai. Az iskolai egyhangúságot megunó Arany azonban ekkoriban nem tanító,
