--- a/koltemeny.html
+++ b/koltemeny.html
@@ -61,7 +61,8 @@
                             vesztette, és Pestre költözésétől ez nála is megfigyelhető, hiszen költészete másként
                             bontakozik ki. Az 1861-1877 közötti időszakban átélt élmények lírai megörökítése ugyan
                             elmaradt, de egyfajta kárpótlásként lírai szövegek azért előfordulnak az Őszikék
-                            versciklusában. A szabadságharc utáni időkben a vallás szerepe a természettudományok fejlődésével a
+                            versciklusában. A szabadságharc utáni időkben a vallás szerepe a természettudományok
+                            fejlődésével a
                             korábbiakhoz képest bizonyos mértékben visszaszorult. A túlvilágba vetett hit és a
                             földöntúli élet léte megkérdőjeleződött, és így megrázó élménnyé vált a halál véglegessége.
                             Arany átérezte korának nagy világnézeti válságát és lélektani hatását, és költészetére az is
