--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav mx-auto">
-                <a class="nav-link active text-dark bg-light m-2 p-2 border border-dark border-3"
-                    href="elete.html">élete</a>
-                <a class="nav-link active text-dark bg-light m-2 p-2 border border-dark border-3" href="iskola.html">Iskola
+                <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3"
+                    href="elete.html">Élete</a>
+                <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3" href="iskola.html">Iskola
                     évei</a>
-                <a class="nav-link active text-dark bg-light m-2 p-2 border border-dark border-3"
+                <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3"
                     href="betegsege.html">Betegsége, halála és temetése</a>
-                <a class="nav-link active text-dark bg-light m-2 p-2 border border-dark border-3"
+                <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3"
                     href="koltemeny.html">Arany jelentősebb költeményei</a>
             </div>
         </div>
