--- a/iskola.html
+++ b/iskola.html
@@ -17,20 +17,20 @@
 
     <nav class="navbar navbar-expand-lg navbar-light hatter ">
         <div class="container-fluid">
-            <a class="navbar-brand active" href="index.html">Főoldal</a>
+            <a class="navbar-brand" href="index.html">Főoldal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-auto">
-                    <a class="nav-link active text-dark bg-light m-2 p-2 border border-dark border-3"
-                        href="elete.html">élete</a>
+                    <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3"
+                        href="elete.html">Élete</a>
                     <a class="nav-link active text-dark bg-light m-2 p-2 border border-dark border-3" href="iskola.html">Iskola
                         évei</a>
-                    <a class="nav-link active text-dark bg-light m-2 p-2 border border-dark border-3"
+                    <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3"
                         href="betegsege.html">Betegsége, halála és temetése</a>
-                    <a class="nav-link active text-dark bg-light m-2 p-2 border border-dark border-3"
+                    <a class="nav-link text-dark bg-light m-2 p-2 border border-dark border-3"
                         href="koltemeny.html">Arany jelentősebb költeményei</a>
                 </div>
             </div>
